--- a/server/package.json
+++ b/server/package.json
@@ -1,17 +1,24 @@
 {
   "name": "athena-dashboard",
   "version": "1.0.0",
-  "description": "Dashboard and website of Athena.",
-  "main": "main.js",
-  "author": "Tuna",
+  "description": "Dashboard and website of Athena Discord Bot.",
+  "main": "dist/src/index.js",
+  "author": "Tuna Sayin",
   "license": "MIT",
   "private": true,
   "dependencies": {
+    "axios": "^0.24.0",
     "body-parser": "^1.19.1",
+    "colors": "^1.4.0",
     "cookie-parser": "^1.4.6",
-    "discord-oauth2": "^2.8.0",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "simple-encryptor": "^4.0.0"
+    "discord.js": "^13.4.0",
+    "express": "^4.17.2",
+    "mongoose": "^6.1.3"
+  },
+  "devDependencies": {
+    "@types/cookie-parser": "^1.4.2",
+    "@types/express": "^4.17.13",
+    "@types/node": "^17.0.4",
+    "@types/sha256": "^0.2.0"
   }
 }
