--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
     "body-parser": "^1.19.1",
     "colors": "^1.4.0",
     "cookie-parser": "^1.4.6",
+    "dayjs": "^1.10.7",
     "discord.js": "^13.4.0",
     "express": "^4.17.2",
     "mongoose": "^6.1.3"
