--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^5.0.2",
     "jquery": "^3.6.0",
     "js-cookie": "^3.0.1",
+    "markdown-to-jsx": "^7.1.5",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-cookie": "^4.0.3",
