Bunch of code imporvements implemented in server

--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,7 @@
   "name": "athena-dashboard",
   "version": "1.0.0",
   "description": "Dashboard and website of Athena Discord Bot.",
-  "main": "dist/src/index.js",
+  "main": "dist/index.js",
   "author": "Tuna Sayin",
   "license": "MIT",
   "private": true,
