--- a/server/package.json
+++ b/server/package.json
@@ -1,25 +1,25 @@
 {
-  "name": "athena-dashboard",
+  "name": "athena-dashboard-server",
   "version": "1.0.0",
-  "description": "Dashboard and website of Athena Discord Bot.",
+  "description": "Server of Athena's dashboard and website.",
   "main": "dist/index.js",
   "author": "Tuna Sayin",
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "axios": "^0.24.0",
+    "axios": "^0.25.0",
     "body-parser": "^1.19.1",
     "colors": "^1.4.0",
     "cookie-parser": "^1.4.6",
     "dayjs": "^1.10.7",
-    "discord.js": "^13.4.0",
+    "discord.js": "^13.6.0",
     "express": "^4.17.2",
-    "mongoose": "^6.1.3"
+    "mongoose": "^6.1.10",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.19.2",
     "@types/cookie-parser": "^1.4.2",
-    "@types/express": "^4.17.13",
-    "@types/node": "^17.0.4",
-    "@types/sha256": "^0.2.0"
+    "@types/express": "^4.17.13"
   }
 }
