updated back-end functions to make them use cache added dynamic language support addded bunch of new stuff to ui

--- a/server/config.example.json
+++ b/server/config.example.json
@@ -22,7 +22,17 @@
     "cookieSign": ""
   },
   "cacheTimeouts": {
-    "users": 1,
-    "userGuilds": 1
-  }
+    "users": 60,
+    "userGuilds": 60
+  },
+  "availableLanguages": [
+    {
+      "id": "en_US",
+      "label": "English"
+    },
+    {
+      "id": "tr_TR",
+      "label": "Türkçe"
+    }
+  ]
 }
