--- a/package.json
+++ b/package.json
@@ -3,14 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.26.0",
+    "body-parser": "^1.19.2",
     "bootstrap": "^5.0.2",
+    "colors": "^1.4.0",
+    "cookie-parser": "^1.4.6",
+    "dayjs": "^1.10.8",
+    "discord.js": "^13.6.0",
+    "dot-object": "^2.1.4",
+    "express": "^4.17.3",
     "jquery": "^3.6.0",
     "js-cookie": "^3.0.1",
     "markdown-to-jsx": "^7.1.5",
+    "mongoose": "^6.2.4",
     "react": "^17.0.2",
+    "react-app-rewired": "^2.2.1",
     "react-bootstrap": "^1.6.1",
     "react-cookie": "^4.0.3",
     "react-dom": "^17.0.2",
@@ -18,13 +25,15 @@
     "react-icons": "^4.2.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
+    "yup": "^0.32.11"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "npm run server-start",
+    "build": "npm run client-build && npm run server-build",
+    "client-start": "react-app-rewired start",
+    "client-build": "react-app-rewired build",
+    "server-start": "node server/dist/index.js",
+    "server-build": "cd server && tsc"
   },
   "eslintConfig": {
     "extends": [
@@ -43,5 +52,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/body-parser": "^1.19.2",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/dot-object": "^2.1.2",
+    "@types/express": "^4.17.13"
   }
 }
