--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "discord.js": "^13.6.0",
     "dot-object": "^2.1.4",
     "express": "^4.17.3",
+    "express-rate-limit": "^6.3.0",
     "jquery": "^3.6.0",
     "js-cookie": "^3.0.1",
     "markdown-to-jsx": "^7.1.5",
@@ -57,6 +58,6 @@
     "@types/body-parser": "^1.19.2",
     "@types/cookie-parser": "^1.4.2",
     "@types/dot-object": "^2.1.2",
-    "@types/express": "^4.17.13"
+    "@types/express-rate-limit": "^6.0.0"
   }
 }
