--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-icons": "^4.2.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
+    "typescript": "^4.6.3",
     "yup": "^0.32.11"
   },
   "scripts": {
