--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "body-parser": "^1.19.2",
     "bootstrap": "^5.0.2",
     "colors": "^1.4.0",
+    "commander": "^9.1.0",
     "cookie-parser": "^1.4.6",
     "dayjs": "^1.10.8",
     "discord.js": "^13.6.0",
     "dot-object": "^2.1.4",
     "express": "^4.17.3",
+    "fs-extra": "^10.0.1",
     "jquery": "^3.6.0",
     "js-cookie": "^3.0.1",
     "markdown-to-jsx": "^7.1.5",
