--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "yup": "^0.32.11"
   },
   "scripts": {
+    "build-production": "node build.js build",
     "start": "npm run server-start",
     "build": "npm run client-build && npm run server-build",
     "client-start": "react-app-rewired start",
