--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test-app",
+  "name": "athena-dashboard",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -14,19 +14,7 @@
     "dot-object": "^2.1.4",
     "express": "^4.17.3",
     "fs-extra": "^10.0.1",
-    "jquery": "^3.6.0",
-    "js-cookie": "^3.0.1",
-    "markdown-to-jsx": "^7.1.5",
     "mongoose": "^6.2.4",
-    "react": "^17.0.2",
-    "react-app-rewired": "^2.2.1",
-    "react-bootstrap": "^1.6.1",
-    "react-cookie": "^4.0.3",
-    "react-dom": "^17.0.2",
-    "react-helmet": "^6.1.0",
-    "react-icons": "^4.2.0",
-    "react-router-dom": "^6.2.1",
-    "react-scripts": "4.0.3",
     "typescript": "^4.6.3",
     "yup": "^0.32.11"
   },
@@ -61,6 +49,18 @@
     "@types/body-parser": "^1.19.2",
     "@types/cookie-parser": "^1.4.2",
     "@types/dot-object": "^2.1.2",
-    "@types/express-rate-limit": "^6.0.0"
+    "@types/express-rate-limit": "^6.0.0",
+    "react": "^17.0.2",
+    "react-app-rewired": "^2.2.1",
+    "react-bootstrap": "^1.6.1",
+    "react-cookie": "^4.0.3",
+    "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
+    "react-icons": "^4.2.0",
+    "react-router-dom": "^6.2.1",
+    "react-scripts": "4.0.3",
+    "markdown-to-jsx": "^7.1.5",
+    "jquery": "^3.6.0",
+    "js-cookie": "^3.0.1"
   }
 }
