--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "dependencies": {
     "axios": "^0.26.0",
     "body-parser": "^1.19.2",
-    "bootstrap": "^5.0.2",
     "colors": "^1.4.0",
     "commander": "^9.1.0",
     "cookie-parser": "^1.4.6",
@@ -61,6 +60,7 @@
     "react-scripts": "4.0.3",
     "markdown-to-jsx": "^7.1.5",
     "jquery": "^3.6.0",
-    "js-cookie": "^3.0.1"
+    "js-cookie": "^3.0.1",
+    "bootstrap": "^5.0.2"
   }
 }
