--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "body-parser": "^1.19.2",
     "colors": "^1.4.0",
     "commander": "^9.1.0",
+    "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "dayjs": "^1.10.8",
     "discord.js": "^13.6.0",
@@ -46,9 +47,14 @@
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.2",
+    "@types/compression": "^1.7.2",
     "@types/cookie-parser": "^1.4.2",
     "@types/dot-object": "^2.1.2",
     "@types/express-rate-limit": "^6.0.0",
+    "bootstrap": "^5.0.2",
+    "jquery": "^3.6.0",
+    "js-cookie": "^3.0.1",
+    "markdown-to-jsx": "^7.1.5",
     "react": "^17.0.2",
     "react-app-rewired": "^2.2.1",
     "react-bootstrap": "^1.6.1",
@@ -57,10 +63,6 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "4.0.3",
-    "markdown-to-jsx": "^7.1.5",
-    "jquery": "^3.6.0",
-    "js-cookie": "^3.0.1",
-    "bootstrap": "^5.0.2"
+    "react-scripts": "4.0.3"
   }
 }
