--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "athena-dashboard",
-  "version": "0.1.0",
+  "version": "1.0.1",
   "private": true,
   "dependencies": {
     "axios": "^0.27.2",
@@ -12,13 +12,13 @@
     "dot-object": "^2.1.4",
     "express": "^4.18.1",
     "mongoose": "^6.3.3",
-    "typescript": "^4.6.4",
     "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/compression": "^1.7.2",
     "@types/cookie-parser": "^1.4.3",
     "@types/dot-object": "^2.1.2",
+    "fs-extra": "^10.1.0",
     "jquery": "^3.6.0",
     "js-cookie": "^3.0.1",
     "react": "^18.1.0",
@@ -28,13 +28,15 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "sass": "^1.51.0"
+    "sass": "^1.51.0",
+    "typescript": "^4.6.4"
   },
   "scripts": {
     "server-start": "node src/server/dist/index.js",
     "server-build": "rm -rf src/server/dist && tsc",
     "client-start": "react-app-rewired start",
-    "client-build": "react-app-rewired build"
+    "client-build": "react-app-rewired build",
+    "production": "node production.js"
   },
   "eslintConfig": {
     "extends": [
