--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "react": "^18.1.0",
     "react-app-rewired": "^2.2.1",
     "react-dom": "^18.1.0",
-    "react-helmet": "^6.1.0",
     "react-icons": "^4.3.1",
+    "react-meta-tags": "^1.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "sass": "^1.51.0",
