--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "discord.js": "^13.6.0",
     "dot-object": "^2.1.4",
     "express": "^4.18.1",
+    "fastify": "^3.29.0",
     "mongoose": "^6.3.3",
     "yup": "^0.32.11"
   },
