--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.18.1",
     "fastify": "^3.29.0",
     "mongoose": "^6.3.3",
+    "react-helmet": "^6.1.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
@@ -26,7 +27,6 @@
     "react-app-rewired": "^2.2.1",
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
-    "react-meta-tags": "^1.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "sass": "^1.51.0",
