--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "athena-dashboard",
-  "version": "1.0.1",
+  "version": "1.0.2",
+  "proxy": "http://localhost:8080",
   "private": true,
   "dependencies": {
     "axios": "^0.27.2",
@@ -13,7 +14,6 @@
     "express": "^4.18.1",
     "fastify": "^3.29.0",
     "mongoose": "^6.3.3",
-    "react-helmet": "^6.1.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
@@ -26,6 +26,7 @@
     "react": "^18.1.0",
     "react-app-rewired": "^2.2.1",
     "react-dom": "^18.1.0",
+    "react-helmet-async": "^1.3.0",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
