--- a/config.json
+++ b/config.json
@@ -19,6 +19,10 @@
       "Destination": "https://discord.gg/etsgB9J"
     },
     {
+      "Name": "source-code",
+      "Destination": "https://github.com/AthenaTheBot"
+    },
+    {
       "Name": "login",
       "Destination": "https://discord.com/api/oauth2/authorize?client_id=754425509533712536&redirect_uri=http://localhost:8080/oauth/callback&response_type=code&scope=identify%20email%20guilds"
     }
