--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "js-cookie": "^3.0.1",
     "react": "^18.1.0",
     "react-app-rewired": "^2.2.1",
+    "react-colorful": "^5.5.1",
     "react-dom": "^18.1.0",
     "react-helmet-async": "^1.3.0",
     "react-icons": "^4.3.1",
