--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react-helmet-async": "^1.3.0",
     "react-icons": "^4.3.1",
     "react-lazy-load-image-component": "^1.5.4",
+    "react-markdown": "^8.0.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "sass": "^1.51.0",
