--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,8 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "sass": "^1.51.0",
-    "typescript": "^4.6.4"
+    "typescript": "^4.6.4",
+    "validator": "^13.7.0"
   },
   "scripts": {
     "start": "react-app-rewired start",
